# uber_assessment_2025

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: processed_data.parquet
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.EDA.ipynb  2.Data_Cleaning.ipynb  3.Data_Processing.ipynb
references/: features_diccionary.txt
tests/: test_data.py
uber_project/: config.py  dashboard.py  extract.py  features.py  transform.py
uber_project/airflow_dags/: weekly_delivery_metrics.py
uber_project/modeling/: models.ipynb
uber_project/sql/: all_data_view.sql  create_weekly_table.sql  weekly_delivery_metrics.sql
